fix test warning